--- a/history.html
+++ b/history.html
@@ -53,8 +53,10 @@ away from the English. Here they encountered tribes that, over time, had moved s
 Credits: http://www.sb.kraljeva-sutjeska.com/foto/themes/rainy_day/images/___history%20african%20art%20timeline  </div>
 
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
-  <h2>Some Famous People from South Africa</h2>
-<div id="container">
-    <div id="first"></div>
-    <div id="second"></div>
+  <h2>Nelson Mandela</h2>
+Rolihlahla Mandela was born  in the village of Mvezo, Transkei, on 18 July 1918. 
+In 1930, when he was 12 years old, his father died.
+Nelson Mandela began his studies for a Bachelor of Arts degree but did not complete the degree there as he was expelled for joining in a student protest.
+So he completed his BA through the University of South Africa.
+Nelson Mandela was arrested in a countrywide police swoop on 5 December 1955, which led to the 1956 trial.
 </div>
