--- a/history.html
+++ b/history.html
@@ -53,12 +53,17 @@ away from the English. Here they encountered tribes that, over time, had moved s
 Credits: http://www.sb.kraljeva-sutjeska.com/foto/themes/rainy_day/images/___history%20african%20art%20timeline  </div>
 
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
-  <h2>Nelson Mandela</h2>
+  <h2>A Brief Summary ofNelson Mandela</h2>
 <p>
-Rolihlahla Mandela was born  in the village of Mvezo, Transkei, on 18 July 1918. 
+Nelson Mandela was born  in the village of Mvezo, Transkei, on 18 July 1918. 
 In 1930, when he was 12 years old, his father died.
 Nelson Mandela began his studies for a Bachelor of Arts degree but did not complete the degree there as he was expelled for joining in a student protest.
 So he completed his BA through the University of South Africa.
-Nelson Mandela was arrested in a countrywide police swoop on 5 December 1955, which led to the 1956 trial.
+Nelson Mandela was arrested in a countrywide police swoop on 5 December 1955, which led to a 1956 trial.
+Mandela later led many protests against white rule and racism, which led to him being convicted and charged and being sent to prison for five years in 1963.
+However in 1964 he was charged of more crimes and sentenced for life.
+Mandela was finally released in 1990. In 1993 President FW de Klerk and Mandela won the Nobel Peace Prize. 
+On May 10 1994, Nelson Mandela was elected the president of South Africa.
+Sadly, Mandela died on December 5, 2015.
 </p>
 </div>
